--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: rgb(19, 4, 4);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,24 +8,30 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.row {
-  margin-left: 0px !important;
+.nav {
+  justify-content: space-between;
+  padding: 10px 30px !important;
+  align-items: center;
 }
 
 #CarritoImagen {
-  height: 50px;
-  width: 50px;
+  height: 35px;
+  width: 35px;
+  filter: invert(100%);
+  margin: 0px 10px;
+}
+
+#nav-dropdown {
+  color: white;
+}
+
+.carritoCounter {
+  display: flex;
+}
+
+footer {
+  text-align: center;
+  background-color: rgb(19, 4, 4);
+  color: white;
+  padding: 10px;
 }
