Avance 5 de julio, spinner

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,11 @@
   align-items: center;
 }
 
+.carritoCounter div {
+  position: relative;
+  top: 4px;
+}
+
 footer {
   text-align: center;
   background-color: rgb(19, 4, 4);
