--- a/src/components/ItemCount/index.css
+++ b/src/components/ItemCount/index.css
@@ -54,3 +54,9 @@
     border-width: 0px;
     color: rgb(65, 101, 112);
 }
+
+.agregarAlCarrito:hover {
+    color: white;
+    background-color: #ac5e5e;
+    cursor: pointer;
+}
