--- a/src/components/containers/itemDetailContainer/index.css
+++ b/src/components/containers/itemDetailContainer/index.css
@@ -19,8 +19,9 @@
     border-radius: 15px;
     margin: 20px;
     align-items: center;
-    width: 250px;
-    height: 550px;
+    width: 25%;
+    height: 70vh;
+    text-align: center
 }
 
 .button-container {
@@ -29,14 +30,26 @@
     align-items: center;
 }
 
+.button-container button:hover {
+    color: white;
+    background-color: #ac5e5e;
+    cursor: pointer;
+}
+
+
 .volverATienda {
     border-radius: 10px;
     background-color: white;
     border: 2px solid rgb(65, 101, 112);
 }
 
+
+
 .linkVolverATienda {
     text-decoration: none;
     color: rgb(65, 101, 112);
 }
 
+.linkVolverATienda:hover {
+    color: white;
+}
